tests/parser/for-statement-in-missing.stderr
error: expected 'in'
 --> $DIR/for-statement-in-missing.lox:1:7
  |
1 | for c _
  |       ^
